sdk/storagecache/arm-storagecache/samples/v7/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [amlFilesystemsArchiveSample.js][amlfilesystemsarchivesample]                         | Archive data from the AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Archive.json                                                                                                                                                                                                                                                                                                            |
| [amlFilesystemsCancelArchiveSample.js][amlfilesystemscancelarchivesample]             | Cancel archiving data from the AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_CancelArchive.json                                                                                                                                                                                                                                                                                             |
| [amlFilesystemsCreateOrUpdateSample.js][amlfilesystemscreateorupdatesample]           | Create or update an AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [amlFilesystemsDeleteSample.js][amlfilesystemsdeletesample]                           | Schedules an AML file system for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Delete.json                                                                                                                                                                                                                                                                                                         |
| [amlFilesystemsGetSample.js][amlfilesystemsgetsample]                                 | Returns an AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Get.json                                                                                                                                                                                                                                                                                                                           |
| [amlFilesystemsListByResourceGroupSample.js][amlfilesystemslistbyresourcegroupsample] | Returns all AML file systems the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_ListByResourceGroup.json                                                                                                                                                                                                                                                           |
| [amlFilesystemsListSample.js][amlfilesystemslistsample]                               | Returns all AML file systems the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_List.json                                                                                                                                                                                                                                                                            |
| [amlFilesystemsUpdateSample.js][amlfilesystemsupdatesample]                           | Update an AML file system instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Update.json                                                                                                                                                                                                                                                                                                                |
| [ascOperationsGetSample.js][ascoperationsgetsample]                                   | Gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascUsagesListSample.js][ascusageslistsample]                                         | Gets the quantity used and quota limit for resources x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/AscResourceUsages_Get.json                                                                                                                                                                                                                                                                                               |
| [cachesCreateOrUpdateSample.js][cachescreateorupdatesample]                           | Create or update a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesDebugInfoSample.js][cachesdebuginfosample]                                     | Tells a cache to write generate debug info for support to process. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDeleteSample.js][cachesdeletesample]                                           | Schedules a cache for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesFlushSample.js][cachesflushsample]                                             | Tells a cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesGetSample.js][cachesgetsample]                                                 | Returns a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesListByResourceGroupSample.js][cacheslistbyresourcegroupsample]                 | Returns all caches the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListSample.js][cacheslistsample]                                               | Returns all caches the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesPausePrimingJobSample.js][cachespauseprimingjobsample]                         | Schedule a priming job to be paused. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/PausePrimingJob.json                                                                                                                                                                                                                                                                                                                     |
| [cachesResumePrimingJobSample.js][cachesresumeprimingjobsample]                       | Resumes a paused priming job. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/ResumePrimingJob.json                                                                                                                                                                                                                                                                                                                           |
| [cachesSpaceAllocationSample.js][cachesspaceallocationsample]                         | Update cache space allocation. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/SpaceAllocation_Post.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStartPrimingJobSample.js][cachesstartprimingjobsample]                         | Create a priming job. This operation is only allowed when the cache is healthy. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StartPrimingJob.json                                                                                                                                                                                                                                                                          |
| [cachesStartSample.js][cachesstartsample]                                             | Tells a Stopped state cache to transition to Active state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStopPrimingJobSample.js][cachesstopprimingjobsample]                           | Schedule a priming job for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StopPrimingJob.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStopSample.js][cachesstopsample]                                               | Tells an Active cache to transition to Stopped state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesUpdateSample.js][cachesupdatesample]                                           | Update a cache instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpgradeFirmwareSample.js][cachesupgradefirmwaresample]                         | Upgrade a cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [checkAmlFsSubnetsSample.js][checkamlfssubnetssample]                                 | Check that subnets will be valid for AML file system create calls. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/checkAmlFSSubnets.json                                                                                                                                                                                                                                                                                     |
| [getRequiredAmlFsSubnetsSizeSample.js][getrequiredamlfssubnetssizesample]             | Get the number of available IP addresses needed for the AML file system information provided. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/getRequiredAmlFSSubnetsSize.json                                                                                                                                                                                                                                                |
| [operationsListSample.js][operationslistsample]                                       | Lists all of the available Resource Provider operations. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                 |
| [skusListSample.js][skuslistsample]                                                   | Get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [storageTargetFlushSample.js][storagetargetflushsample]                               | Tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetInvalidateSample.js][storagetargetinvalidatesample]                     | Invalidate all cached data for a storage target. Cached files are discarded and fetched from the back end on the next request. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Invalidate.json                                                                                                                                                                                                                 |
| [storageTargetResumeSample.js][storagetargetresumesample]                             | Resumes client access to a previously suspended storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetSuspendSample.js][storagetargetsuspendsample]                           | Suspends client access to a storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [storageTargetsCreateOrUpdateSample.js][storagetargetscreateorupdatesample]           | Create or update a Storage Target. This operation is allowed at any time, but if the cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsDeleteSample.js][storagetargetsdeletesample]                           | Removes a Storage Target from a cache. This operation is allowed at any time, but if the cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the cache is healthy again. Note that if the cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Delete.json |
| [storageTargetsDnsRefreshSample.js][storagetargetsdnsrefreshsample]                   | Tells a storage target to refresh its DNS information. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [storageTargetsGetSample.js][storagetargetsgetsample]                                 | Returns a Storage Target from a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsListByCacheSample.js][storagetargetslistbycachesample]                 | Returns a list of Storage Targets for the specified cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsRestoreDefaultsSample.js][storagetargetsrestoredefaultssample]         | Tells a storage target to restore its settings to their default values. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_RestoreDefaults.json                                                                                                                                                                                                                                                                   |
| [usageModelsListSample.js][usagemodelslistsample]                                     | Get the list of cache usage models available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/UsageModels_List.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node amlFilesystemsArchiveSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env STORAGECACHE_SUBSCRIPTION_ID="<storagecache subscription id>" STORAGECACHE_RESOURCE_GROUP="<storagecache resource group>" node amlFilesystemsArchiveSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[amlfilesystemsarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsArchiveSample.js
[amlfilesystemscancelarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsCancelArchiveSample.js
[amlfilesystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsCreateOrUpdateSample.js
[amlfilesystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsDeleteSample.js
[amlfilesystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsGetSample.js
[amlfilesystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsListByResourceGroupSample.js
[amlfilesystemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsListSample.js
[amlfilesystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/amlFilesystemsUpdateSample.js
[ascoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/ascOperationsGetSample.js
[ascusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/ascUsagesListSample.js
[cachescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesCreateOrUpdateSample.js
[cachesdebuginfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesDebugInfoSample.js
[cachesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesDeleteSample.js
[cachesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesFlushSample.js
[cachesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesGetSample.js
[cacheslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesListByResourceGroupSample.js
[cacheslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesListSample.js
[cachespauseprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesPausePrimingJobSample.js
[cachesresumeprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesResumePrimingJobSample.js
[cachesspaceallocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesSpaceAllocationSample.js
[cachesstartprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesStartPrimingJobSample.js
[cachesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesStartSample.js
[cachesstopprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesStopPrimingJobSample.js
[cachesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesStopSample.js
[cachesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesUpdateSample.js
[cachesupgradefirmwaresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/cachesUpgradeFirmwareSample.js
[checkamlfssubnetssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/checkAmlFsSubnetsSample.js
[getrequiredamlfssubnetssizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/getRequiredAmlFsSubnetsSizeSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/operationsListSample.js
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/skusListSample.js
[storagetargetflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetFlushSample.js
[storagetargetinvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetInvalidateSample.js
[storagetargetresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetResumeSample.js
[storagetargetsuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetSuspendSample.js
[storagetargetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsCreateOrUpdateSample.js
[storagetargetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsDeleteSample.js
[storagetargetsdnsrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsDnsRefreshSample.js
[storagetargetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsGetSample.js
[storagetargetslistbycachesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsListByCacheSample.js
[storagetargetsrestoredefaultssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/storageTargetsRestoreDefaultsSample.js
[usagemodelslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/javascript/usageModelsListSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-storagecache?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagecache/arm-storagecache/README.md
