sdk/storagecache/arm-storagecache/samples/v9/javascript/README.md
# @azure/arm-storagecache client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-storagecache in some common scenarios.

| **File Name**                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                              |
| ------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [amlFilesystemsArchiveSample.js][amlfilesystemsarchivesample]                         | archive data from the AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_Archive.json                                                                                                                                                                                                                                                                                                            |
| [amlFilesystemsCancelArchiveSample.js][amlfilesystemscancelarchivesample]             | cancel archiving data from the AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_CancelArchive.json                                                                                                                                                                                                                                                                                             |
| [amlFilesystemsCreateOrUpdateSample.js][amlfilesystemscreateorupdatesample]           | create or update an AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [amlFilesystemsDeleteSample.js][amlfilesystemsdeletesample]                           | schedules an AML file system for deletion. x-ms-original-file: 2026-08-01/amlFilesystems_Delete.json                                                                                                                                                                                                                                                                                                         |
| [amlFilesystemsGetSample.js][amlfilesystemsgetsample]                                 | returns an AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_Get.json                                                                                                                                                                                                                                                                                                                           |
| [amlFilesystemsListByResourceGroupSample.js][amlfilesystemslistbyresourcegroupsample] | returns all AML file systems the user has access to under a resource group. x-ms-original-file: 2026-08-01/amlFilesystems_ListByResourceGroup.json                                                                                                                                                                                                                                                           |
| [amlFilesystemsListSample.js][amlfilesystemslistsample]                               | returns all AML file systems the user has access to under a subscription. x-ms-original-file: 2026-08-01/amlFilesystems_List.json                                                                                                                                                                                                                                                                            |
| [amlFilesystemsUpdateSample.js][amlfilesystemsupdatesample]                           | update an AML file system instance. x-ms-original-file: 2026-08-01/amlFilesystems_Update.json                                                                                                                                                                                                                                                                                                                |
| [ascOperationsGetSample.js][ascoperationsgetsample]                                   | gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: 2026-08-01/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascUsagesListSample.js][ascusageslistsample]                                         | gets the quantity used and quota limit for resources x-ms-original-file: 2026-08-01/AscResourceUsages_Get.json                                                                                                                                                                                                                                                                                               |
| [autoExportJobsCreateOrUpdateSample.js][autoexportjobscreateorupdatesample]           | create or update an auto export job. x-ms-original-file: 2026-08-01/autoExportJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [autoExportJobsDeleteSample.js][autoexportjobsdeletesample]                           | schedules an auto export job for deletion. x-ms-original-file: 2026-08-01/autoExportJobs_Delete.json                                                                                                                                                                                                                                                                                                         |
| [autoExportJobsGetSample.js][autoexportjobsgetsample]                                 | returns an auto export job. x-ms-original-file: 2026-08-01/autoExportJobs_Get.json                                                                                                                                                                                                                                                                                                                           |
| [autoExportJobsListByAmlFilesystemSample.js][autoexportjobslistbyamlfilesystemsample] | returns all the auto export jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/autoExportJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                     |
| [autoExportJobsUpdateSample.js][autoexportjobsupdatesample]                           | update an auto export job instance. x-ms-original-file: 2026-08-01/autoExportJobs_Update.json                                                                                                                                                                                                                                                                                                                |
| [autoImportJobsCreateOrUpdateSample.js][autoimportjobscreateorupdatesample]           | create or update an auto import job. x-ms-original-file: 2026-08-01/autoImportJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [autoImportJobsDeleteSample.js][autoimportjobsdeletesample]                           | schedules an auto import job for deletion. x-ms-original-file: 2026-08-01/autoImportJobs_Delete.json                                                                                                                                                                                                                                                                                                         |
| [autoImportJobsGetSample.js][autoimportjobsgetsample]                                 | returns an auto import job. x-ms-original-file: 2026-08-01/autoImportJobs_Get.json                                                                                                                                                                                                                                                                                                                           |
| [autoImportJobsListByAmlFilesystemSample.js][autoimportjobslistbyamlfilesystemsample] | returns all the auto import jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/autoImportJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                     |
| [autoImportJobsUpdateSample.js][autoimportjobsupdatesample]                           | update an auto import job instance. x-ms-original-file: 2026-08-01/autoImportJobs_Update.json                                                                                                                                                                                                                                                                                                                |
| [cachesCreateOrUpdateSample.js][cachescreateorupdatesample]                           | create or update a cache. x-ms-original-file: 2026-08-01/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesDebugInfoSample.js][cachesdebuginfosample]                                     | tells a cache to write generate debug info for support to process. x-ms-original-file: 2026-08-01/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDeleteSample.js][cachesdeletesample]                                           | schedules a cache for deletion. x-ms-original-file: 2026-08-01/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesFlushSample.js][cachesflushsample]                                             | tells a cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: 2026-08-01/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesGetSample.js][cachesgetsample]                                                 | returns a cache. x-ms-original-file: 2026-08-01/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesListByResourceGroupSample.js][cacheslistbyresourcegroupsample]                 | returns all caches the user has access to under a resource group. x-ms-original-file: 2026-08-01/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListSample.js][cacheslistsample]                                               | returns all caches the user has access to under a subscription. x-ms-original-file: 2026-08-01/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesPausePrimingJobSample.js][cachespauseprimingjobsample]                         | schedule a priming job to be paused. x-ms-original-file: 2026-08-01/PausePrimingJob.json                                                                                                                                                                                                                                                                                                                     |
| [cachesResumePrimingJobSample.js][cachesresumeprimingjobsample]                       | resumes a paused priming job. x-ms-original-file: 2026-08-01/ResumePrimingJob.json                                                                                                                                                                                                                                                                                                                           |
| [cachesSpaceAllocationSample.js][cachesspaceallocationsample]                         | update cache space allocation. x-ms-original-file: 2026-08-01/SpaceAllocation_Post.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStartPrimingJobSample.js][cachesstartprimingjobsample]                         | create a priming job. This operation is only allowed when the cache is healthy. x-ms-original-file: 2026-08-01/StartPrimingJob.json                                                                                                                                                                                                                                                                          |
| [cachesStartSample.js][cachesstartsample]                                             | tells a Stopped state cache to transition to Active state. x-ms-original-file: 2026-08-01/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStopPrimingJobSample.js][cachesstopprimingjobsample]                           | schedule a priming job for deletion. x-ms-original-file: 2026-08-01/StopPrimingJob.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStopSample.js][cachesstopsample]                                               | tells an Active cache to transition to Stopped state. x-ms-original-file: 2026-08-01/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesUpdateSample.js][cachesupdatesample]                                           | update a cache instance. x-ms-original-file: 2026-08-01/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpgradeFirmwareSample.js][cachesupgradefirmwaresample]                         | upgrade a cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: 2026-08-01/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [checkAmlFSSubnetsSample.js][checkamlfssubnetssample]                                 | check that subnets will be valid for AML file system create calls. x-ms-original-file: 2026-08-01/checkAmlFSSubnets.json                                                                                                                                                                                                                                                                                     |
| [expansionJobsCreateOrUpdateSample.js][expansionjobscreateorupdatesample]             | create or update an expansion job. x-ms-original-file: 2026-08-01/expansionJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                          |
| [expansionJobsDeleteSample.js][expansionjobsdeletesample]                             | schedules an expansion job for deletion. x-ms-original-file: 2026-08-01/expansionJobs_Delete.json                                                                                                                                                                                                                                                                                                            |
| [expansionJobsGetSample.js][expansionjobsgetsample]                                   | returns an expansion job. x-ms-original-file: 2026-08-01/expansionJobs_Get.json                                                                                                                                                                                                                                                                                                                              |
| [expansionJobsListByAmlFilesystemSample.js][expansionjobslistbyamlfilesystemsample]   | returns all the expansion jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/expansionJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                        |
| [expansionJobsUpdateSample.js][expansionjobsupdatesample]                             | update an expansion job instance. x-ms-original-file: 2026-08-01/expansionJobs_Update.json                                                                                                                                                                                                                                                                                                                   |
| [getRequiredAmlFSSubnetsSizeSample.js][getrequiredamlfssubnetssizesample]             | get the number of available IP addresses needed for the AML file system information provided. x-ms-original-file: 2026-08-01/getRequiredAmlFSSubnetsSize.json                                                                                                                                                                                                                                                |
| [importJobsCreateOrUpdateSample.js][importjobscreateorupdatesample]                   | create or update an import job. x-ms-original-file: 2026-08-01/importJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [importJobsDeleteSample.js][importjobsdeletesample]                                   | schedules an import job for deletion. x-ms-original-file: 2026-08-01/importJobs_Delete.json                                                                                                                                                                                                                                                                                                                  |
| [importJobsGetSample.js][importjobsgetsample]                                         | returns an import job. x-ms-original-file: 2026-08-01/importJobs_Get.json                                                                                                                                                                                                                                                                                                                                    |
| [importJobsListByAmlFilesystemSample.js][importjobslistbyamlfilesystemsample]         | returns all import jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/importJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                                  |
| [importJobsUpdateSample.js][importjobsupdatesample]                                   | update an import job instance. x-ms-original-file: 2026-08-01/importJob_Update.json                                                                                                                                                                                                                                                                                                                          |
| [operationsListSample.js][operationslistsample]                                       | lists all of the available Resource Provider operations. x-ms-original-file: 2026-08-01/Operations_List.json                                                                                                                                                                                                                                                                                                 |
| [rebalanceJobsDeleteSample.js][rebalancejobsdeletesample]                             | schedules a rebalance job for deletion. x-ms-original-file: 2026-08-01/RebalanceJobs_Delete.json                                                                                                                                                                                                                                                                                                             |
| [rebalanceJobsGetSample.js][rebalancejobsgetsample]                                   | returns a rebalance job. x-ms-original-file: 2026-08-01/RebalanceJobs_Get.json                                                                                                                                                                                                                                                                                                                               |
| [rebalanceJobsListByAmlFilesystemSample.js][rebalancejobslistbyamlfilesystemsample]   | returns all the rebalance jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/RebalanceJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                        |
| [rebalanceJobsUpdateSample.js][rebalancejobsupdatesample]                             | update a rebalance job instance. x-ms-original-file: 2026-08-01/RebalanceJobs_Update.json                                                                                                                                                                                                                                                                                                                    |
| [skusListSample.js][skuslistsample]                                                   | get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: 2026-08-01/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [storageTargetOperationsFlushSample.js][storagetargetoperationsflushsample]           | tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: 2026-08-01/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetOperationsInvalidateSample.js][storagetargetoperationsinvalidatesample] | invalidate all cached data for a storage target. Cached files are discarded and fetched from the back end on the next request. x-ms-original-file: 2026-08-01/StorageTargets_Invalidate.json                                                                                                                                                                                                                 |
| [storageTargetOperationsResumeSample.js][storagetargetoperationsresumesample]         | resumes client access to a previously suspended storage target. x-ms-original-file: 2026-08-01/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetOperationsSuspendSample.js][storagetargetoperationssuspendsample]       | suspends client access to a storage target. x-ms-original-file: 2026-08-01/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [storageTargetsCreateOrUpdateSample.js][storagetargetscreateorupdatesample]           | create or update a Storage Target. This operation is allowed at any time, but if the cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the cache is healthy again. x-ms-original-file: 2026-08-01/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsDeleteSample.js][storagetargetsdeletesample]                           | removes a Storage Target from a cache. This operation is allowed at any time, but if the cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the cache is healthy again. Note that if the cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: 2026-08-01/StorageTargets_Delete.json |
| [storageTargetsDnsRefreshSample.js][storagetargetsdnsrefreshsample]                   | tells a storage target to refresh its DNS information. x-ms-original-file: 2026-08-01/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [storageTargetsGetSample.js][storagetargetsgetsample]                                 | returns a Storage Target from a cache. x-ms-original-file: 2026-08-01/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsListByCacheSample.js][storagetargetslistbycachesample]                 | returns a list of Storage Targets for the specified cache. x-ms-original-file: 2026-08-01/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsRestoreDefaultsSample.js][storagetargetsrestoredefaultssample]         | tells a storage target to restore its settings to their default values. x-ms-original-file: 2026-08-01/StorageTargets_RestoreDefaults.json                                                                                                                                                                                                                                                                   |
| [usageModelsListSample.js][usagemodelslistsample]                                     | get the list of cache usage models available to this subscription. x-ms-original-file: 2026-08-01/UsageModels_List.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node amlFilesystemsArchiveSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node amlFilesystemsArchiveSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[amlfilesystemsarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsArchiveSample.js
[amlfilesystemscancelarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsCancelArchiveSample.js
[amlfilesystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsCreateOrUpdateSample.js
[amlfilesystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsDeleteSample.js
[amlfilesystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsGetSample.js
[amlfilesystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsListByResourceGroupSample.js
[amlfilesystemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsListSample.js
[amlfilesystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/amlFilesystemsUpdateSample.js
[ascoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/ascOperationsGetSample.js
[ascusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/ascUsagesListSample.js
[autoexportjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoExportJobsCreateOrUpdateSample.js
[autoexportjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoExportJobsDeleteSample.js
[autoexportjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoExportJobsGetSample.js
[autoexportjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoExportJobsListByAmlFilesystemSample.js
[autoexportjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoExportJobsUpdateSample.js
[autoimportjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoImportJobsCreateOrUpdateSample.js
[autoimportjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoImportJobsDeleteSample.js
[autoimportjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoImportJobsGetSample.js
[autoimportjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoImportJobsListByAmlFilesystemSample.js
[autoimportjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/autoImportJobsUpdateSample.js
[cachescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesCreateOrUpdateSample.js
[cachesdebuginfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesDebugInfoSample.js
[cachesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesDeleteSample.js
[cachesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesFlushSample.js
[cachesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesGetSample.js
[cacheslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesListByResourceGroupSample.js
[cacheslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesListSample.js
[cachespauseprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesPausePrimingJobSample.js
[cachesresumeprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesResumePrimingJobSample.js
[cachesspaceallocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesSpaceAllocationSample.js
[cachesstartprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesStartPrimingJobSample.js
[cachesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesStartSample.js
[cachesstopprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesStopPrimingJobSample.js
[cachesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesStopSample.js
[cachesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesUpdateSample.js
[cachesupgradefirmwaresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/cachesUpgradeFirmwareSample.js
[checkamlfssubnetssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/checkAmlFSSubnetsSample.js
[expansionjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/expansionJobsCreateOrUpdateSample.js
[expansionjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/expansionJobsDeleteSample.js
[expansionjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/expansionJobsGetSample.js
[expansionjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/expansionJobsListByAmlFilesystemSample.js
[expansionjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/expansionJobsUpdateSample.js
[getrequiredamlfssubnetssizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/getRequiredAmlFSSubnetsSizeSample.js
[importjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/importJobsCreateOrUpdateSample.js
[importjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/importJobsDeleteSample.js
[importjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/importJobsGetSample.js
[importjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/importJobsListByAmlFilesystemSample.js
[importjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/importJobsUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/operationsListSample.js
[rebalancejobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/rebalanceJobsDeleteSample.js
[rebalancejobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/rebalanceJobsGetSample.js
[rebalancejobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/rebalanceJobsListByAmlFilesystemSample.js
[rebalancejobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/rebalanceJobsUpdateSample.js
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/skusListSample.js
[storagetargetoperationsflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetOperationsFlushSample.js
[storagetargetoperationsinvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetOperationsInvalidateSample.js
[storagetargetoperationsresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetOperationsResumeSample.js
[storagetargetoperationssuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetOperationsSuspendSample.js
[storagetargetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsCreateOrUpdateSample.js
[storagetargetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsDeleteSample.js
[storagetargetsdnsrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsDnsRefreshSample.js
[storagetargetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsGetSample.js
[storagetargetslistbycachesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsListByCacheSample.js
[storagetargetsrestoredefaultssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/storageTargetsRestoreDefaultsSample.js
[usagemodelslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/javascript/usageModelsListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-storagecache
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagecache/arm-storagecache/README.md
